# continuity-chess-engine

./: CMakeLists.txt  LICENSE  README.md  build.bat
src/: Board.cpp  Board.h  Continuity.cpp  Continuity.h
